data/derived/comb/progs/unify/prog3345.ml.out
Characters 17-18:
  let c1 () = (8,-.3,-.2);;
                   ^
Error: This expression has type int but an expression was expected of type
         float
